--- a/pages/mine/myOrder/orderInfor/logistics/logisticsDetail/logisticsDetail.wxml
+++ b/pages/mine/myOrder/orderInfor/logistics/logisticsDetail/logisticsDetail.wxml
@@ -1,23 +1,28 @@
 <!--pages/mine/myOrder/orderInfor/logistics/logisticsDetail/logisticsDetail.wxml-->
-<view>
-  <view>
+<view class="page">
+  <view class="my_cells">
     <mp-cells>
-      <mp-cell title="订单编号" footer="1233r4787389"></mp-cell>
       <mp-cell title="运单号" footer="37948798475"></mp-cell>
       <mp-cell title="物流公司" footer="中通快递"></mp-cell>
     </mp-cells>
   </view>
 
-  <view>
-    <image src="../../../../../../resources/img/b.png" style="width: 200rpx; height: 200rpx;" />
-    <view>
-      <text>商品名称</text>
-      <text>￥36.00</text>
-      <text>支持7天无理由退换</text>
+  <view class="imgs">
+    <view class="imgs_box">
+      <image class="my_img" src="../../../../../../resources/img/a.png" />
+      <image class="my_img" src="../../../../../../resources/img/a.png" />
+      <image class="my_img" src="../../../../../../resources/img/a.png" />
     </view>
   </view>
 
-  <view>
-    <slider>123</slider>
+  <view class="slider_program">
+    <slider class="my_slider"></slider>
+
+    <view class="log_program">
+      <view class="width_limit" wx:for="{{logDetailData}}" wx:key="index">
+        <view class="{{index == 0 ? 'navActive' : ''}}">您的包裹已到「{{item.add}}」已到达</view>
+        <text class="log_txt">{{item.date}}</text>
+      </view>
+    </view>
   </view>
 </view>
