--- a/pages/mine/myOrder/orderInfor/myService/myService.wxml
+++ b/pages/mine/myOrder/orderInfor/myService/myService.wxml
@@ -1,14 +1,17 @@
 <!--pages/mine/myService/myService.wxml-->
-<view>
-  <view>方太油烟机</view>
+<view class="page">
+  <view class="goods">
+    <image class="goods_img" src="../../../../../resources/img/a.png" />
+    <view class="goods_content">方太油烟机方太油烟机方太油烟机方太油烟机方太油烟机方太油烟机</view>
+  </view>
 
   <view>
     <mp-cells>
-      <mp-cell title="退款" link hover>
-        <image slot="icon" src="../../../resources/img/tuikuan.png" style="height: 90rpx; width: 90rpx;"/>
+      <mp-cell title="退款" link hover bindtap="bindtoRefund">
+        <image class="my_icon" slot="icon" src="../../../../../resources/img/tuikuan.png" />
       </mp-cell>
-      <mp-cell title="退货" link hover>
-        <image slot="icon" src="../../../resources/img/tui.png" style="height: 90rpx; width: 90rpx;" />
+      <mp-cell title="退货退款" link hover bindtap="bindtoRegoods">
+        <image class="my_icon" slot="icon" src="../../../../../resources/img/tui.png" />
       </mp-cell>
     </mp-cells>
   </view>
