--- a/pages/mine/myOrder/orderInfor/myService/myService.wxss
+++ b/pages/mine/myOrder/orderInfor/myService/myService.wxss
@@ -1,1 +1,32 @@
 /* pages/mine/myService/myService.wxss */
+.page {
+  background-color: #F5F5F5;
+  font-size: 34rpx;
+  color: #333333;
+}
+
+.goods {
+  padding: 36rpx 32rpx 48rpx;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 16rpx;
+  background-color: #ffffff;
+}
+
+.goods_img {
+  width: 200rpx;
+  height: 200rpx;
+  border-radius: 8rpx;
+}
+
+.goods_content {
+  width: 60%;
+  overflow: hidden;
+}
+
+.my_icon {
+  width: 42rpx;
+  height: 42rpx;
+  margin: 0 29rpx -9rpx 0;
+}
