--- a/pages/mine/myOrder/orderInfor/orderInfor.wxml
+++ b/pages/mine/myOrder/orderInfor/orderInfor.wxml
@@ -1,28 +1,47 @@
 <!--pages/mine/myOrder/orderInfor/orderInfor.wxml-->
-<view>
+<view class="page">
   <view class="infor_top">
-    <view>{{orderDetail.statusDes}}</view>
-    <view>还剩8天2小时自动确认</view>
+    <view>
+      <view>{{orderDetail.statusDes}}</view>
+      <view>还剩8天2小时自动确认</view>
+    </view>
+    <image class="infor_img" src="../../../../resources/img/shopping-bag2.png" />
   </view>
 
-  <view>
+  <view class="buyer">
     <view>
       {{orderDetail.deliveryAddressName}}
       <text>{{orderDetail.deliveryAddressPhone}}</text>
     </view>
     <view>
       <mp-icon size="{{15}}" color="orange" icon="location" type="field"></mp-icon>
-      <text>{{orderDetail.deliveryAddressAdd}}</text>
+      <text class="buyer_add">{{orderDetail.deliveryAddressAdd}}</text>
     </view>
   </view>
 
   <view>
-    <view>
-      <button bindtap="toMyService">售后</button>
+    <mp-cell class="my_cell" title="商品信息" link></mp-cell>
+    <view class="goods_wrap">
+      <view class="goods" wx:for="{{goodsData}}" wx:key="index">
+        <image class="img_lf" src="{{item.imgSrc}}" />
+        <view class="content_rt">
+          <view class="rt_top">
+            <view class="top_title">{{item.title}}</view>
+            <text>×{{item.num}}</text>
+          </view>
+
+          <text class="sec_title">{{item.secTitle}}</text>
+
+          <view class="rt_btm">
+            <text style="color: #FF3B30; font-size: 40rpx;">¥{{item.price}}</text>
+            <button size="mini" class="my_btn" bindtap="bindToServe">售后</button>
+          </view>
+        </view>
+      </view>
     </view>
   </view>
 
-  <view>
+  <view class="my_cells">
     <mp-cells>
       <mp-cell title="订单信息"></mp-cell>
       <mp-cell title="商品总价" footer="￥{{orderDetail.subtotal}}"></mp-cell>
@@ -31,9 +50,21 @@
     </mp-cells>
   </view>
 
-  <view>
+  <view class="my_cells">
+    <mp-cells>
+      <mp-cell title="订单编号" footer="123283"></mp-cell>
+      <mp-cell title="下单时间" footer="2020-5-23 16:00"></mp-cell>
+      <mp-cell title="支付方式" footer="微信支付"></mp-cell>
+      <mp-cell title="支付时间" footer="2020-5-23 16:00"></mp-cell>
+      <mp-cell title="发货时间" footer="2020-5-24 13:00"></mp-cell>
+    </mp-cells>
+  </view>
+
+  <view class="pay">
     <text>实付金额：￥{{orderDetail.totalPrice}}</text>
-    <button size="mini" bindtap="bindToLogistics">查看物流</button>
-    <button size="mini">确认收货</button>
+    <view>
+      <button class="my_btn" size="mini" bindtap="bindToLogistics">查看物流</button>
+      <button class="my_btn btm_btn" size="mini" bindtap="bindToEvaluate">确认收货</button>
+    </view>
   </view>
 </view>
