--- a/pages/mine/myOrder/orderInfor/orderInfor.wxss
+++ b/pages/mine/myOrder/orderInfor/orderInfor.wxss
@@ -1,5 +1,114 @@
 /* pages/mine/myOrder/orderInfor/orderInfor.wxss */
+.page {
+  color: #333333;
+  font-size: 28rpx;
+}
+
 .infor_top {
-  width: 100%;
-  height: 300rpx;
+  padding: 52rpx 32rpx;
+  background-image:  linear-gradient(90deg, #EF556B 0%, #D9444F 100%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #FFFFFF;
+}
+
+.infor_img {
+  width: 100rpx;
+  height: 100rpx;
+}
+
+.buyer {
+  padding: 36rpx 32rpx;
+  color: #2D313A;
+  font-size: 32rpx;
+  border-bottom: 16rpx solid #F5F5F5;
+}
+
+.buyer_add {
+  color: #868A92;
+  font-size: 24rpx;
+}
+
+.my_cell {
+  font-size: 32rpx;
+  border-bottom: 1px solid #F6F6F7;
+}
+
+.goods_wrap {
+  border-bottom: 16rpx solid #F5F5F5;
+}
+
+.goods {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 32rpx;
+  border-top: 1px solid #F5F5F5;
+}
+
+.img_lf {
+  width: 200rpx;
+  height: 200rpx;
+  border-radius: 8rpx;
+}
+
+.content_rt {
+  width: 60%;
+}
+
+.rt_top {
+  font-size: 34rpx;
+}
+
+.rt_top, .rt_btm {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sec_title {
+  font-size: 24rpx; 
+  color: #999999; 
+  margin: 16rpx 0 46rpx 0;
+}
+
+.top_title {
+  width: 60%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.my_btn {
+  padding: 12rpx 44rpx;
+  border: 1px solid #CBCED5;
+  border-radius: 44rpx;
+  margin: 0;
+}
+
+.my_cells {
+  border-bottom: 16rpx solid #F5F5F5;
+  font-size: 28rpx;
+}
+
+.my_btn {
+  border: 1px solid #BEC2CB;
+  border-radius: 40rpx;
+  padding: 10rpx 16rpx;
+  margin-right: 20rpx;
+  font-size: 24rpx !important;
+}
+
+.btm_btn {
+  color: #E02020;
+}
+
+.pay {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 36rpx 32rpx;
+  font-size: 28rpx;
+  color: #FF3C3C;
 }
